--- a/src/app/blockchain-evote/user/register/register.component.html
+++ b/src/app/blockchain-evote/user/register/register.component.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 <div class="card">
-    <div class="flex flex-wrap card-container" style="max-width: 100%">
+    <div class="flex flex-wrap card-container m-2" style="max-width: 100%">
         <div class="flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 ml-2 border-round" style="min-width: 200px; min-height: 100px" *ngFor="let elec of election">
             <p-card header="{{elec.elecName}}" [style]="{width: '360px'}" styleClass="p-card-shadow">
                 <ng-template pTemplate="header">
