--- a/src/app/blockchain-evote/user/register/reg-candidate/reg-candidate.component.html
+++ b/src/app/blockchain-evote/user/register/reg-candidate/reg-candidate.component.html
@@ -283,7 +283,7 @@
 <app-footer></app-footer>
 <p-dialog [(visible)]="displayModal" [modal]="true" [style]="{width: '30vw'}" [breakpoints]="{'960px': '75vw', '640px': '80vw'}" [draggable]="false" [resizable]="false" [closable]="false" [transitionOptions]="'280ms'">
     <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 50px ">
-        <img src="assets\img\status.png" height="65" width="65">
+        <img src="assets\img\icon\status_yes.png" height="65" width="65">
     </div>
     <div class="flex align-items-center justify-content-center mt-5 " style="min-width: 100%; min-height: 50px ">
         <H1>ลงทะเบียนสำเร็จ</H1>
