--- a/src/app/blockchain-evote/user/regis-status/edit-register/edit-register.component.html
+++ b/src/app/blockchain-evote/user/regis-status/edit-register/edit-register.component.html
@@ -113,9 +113,9 @@
                         </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
-                                <div class="field" [formGroup]="regisForm">
+                                <div class="field">
                                     <label for="phone" class="block">หมายเลขโทรศัพท์</label>
-                                    <input id="phone" type="text" pInputText [(ngModel)]="studentData.phoneNo" formControlName="candidatePhone" />
+                                    <input id="phone" type="text" pInputText [(ngModel)]="candidateData.candiPhone" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 mt-0 border-round" style="min-width: 200px; min-height: 100px">
