--- a/src/app/blockchain-evote/auth/log-in/log-in.component.scss
+++ b/src/app/blockchain-evote/auth/log-in/log-in.component.scss
@@ -13,3 +13,15 @@
 .grid-item {
     cursor: pointer;
 }
+
+.buttonColor {
+    background: #05A4A9;
+    border-radius: 5px;
+    border-color: #05A4A9;
+}
+
+.buttonColor:hover {
+    background: #039396;
+    border-radius: 5px;
+    border-color: #039396;
+}
