--- a/src/app/blockchain-evote/user/regis-status/regis-status.component.html
+++ b/src/app/blockchain-evote/user/regis-status/regis-status.component.html
@@ -23,7 +23,7 @@
             </div>
             <div *ngIf="regisDetail" class="flex justify-content-center font-bold surface-border surface-overlay border-3 border-round text-gray-900 m-2" style="width: 650px;height: 609px;">
                 <div class="card">
-                    <div class="flex justify-content-center flex-wrap card-container yellow-container" style="min-height: 300px">
+                    <div class="flex justify-content-center flex-wrap card-container" style="min-height: 300px">
                         <div class="flex align-items-center justify-content-center border-round m-2" style="min-width: 200px; min-height: 50px"></div>
                         <div class="flex align-items-center justify-content-center border-round m-2" style="min-width: 200px; min-height: 20px"></div>
                         <div class="flex flex-wrap align-items-center justify-content-center font-bold text-gray-900 border-round m-2" style="max-width: 200px; min-height: 50px">
@@ -57,30 +57,37 @@
                         </div>
                     </div>
                     <div class="flex align-content-end justify-content-center flex-wrap card-container green-container" style="min-height: 260px">
-                        <div class="flex align-items-center border-bottom-1 justify-content-center font-bold m-1" style="min-width: 95%; min-height: 50px">
-                            <div class="flex align-items-center justify-content-start font-bold border-round m-1" style="min-width: 45%; min-height: 50px">
+                        <div class="flex align-items-center border-bottom-1 justify-content-center font-bold m-1" style="min-width: 95%; min-height: 40px">
+                            <div class="flex align-items-center justify-content-start font-bold border-round m-1" style="min-width: 45%; min-height: 40px">
                                 รายการที่สมัคร
                             </div>
-                            <div class="flex align-items-center justify-content-end text-blue-300 border-round m-1" style="min-width: 50%;min-height: 50px">
+                            <div class="flex align-items-center justify-content-end text-blue-300 border-round m-1" style="min-width: 50%;min-height: 40px">
                                 <div>
                                     {{regisDetail[0].election.elecName}}
                                 </div>
                             </div>
                         </div>
-                        <div class="flex align-items-center justify-content-center border-bottom-1 font-bold m-1" style="min-width: 95% ; min-height: 50px">
-                            <div class="flex align-items-center justify-content-start font-bold border-round m-1" style="min-width: 45%; min-height: 50px">
+                        <div class="flex align-items-center justify-content-center border-bottom-1 font-bold m-1" style="min-width: 95% ; min-height: 40px">
+                            <div class="flex align-items-center justify-content-start font-bold border-round m-1" style="min-width: 45%; min-height: 40px">
                                 วันที่ลงสมัคร
                             </div>
-                            <div class="flex align-items-center justify-content-end font-bold text-blue-300 border-round m-1" style="min-width: 50%;min-height: 50px">
+                            <div class="flex align-items-center justify-content-end font-bold text-blue-300 border-round m-1" style="min-width: 50%;min-height: 40px">
                                 {{regisDetail[0].candidate.regisDate | formatDate}}
                             </div>
                         </div>
-                        <div class="flex align-items-center justify-content-center font-bold border-bottom-1 m-1" style="min-width: 95%; min-height: 50px">
-                            <div class="flex align-items-center justify-content-start font-bold border-round m-1" style="min-width: 45%; min-height: 50px">
+                        <div class="flex align-items-center justify-content-center font-bold border-bottom-1 m-1" style="min-width: 95%; min-height: 40px">
+                            <div class="flex align-items-center justify-content-start font-bold border-round m-1" style="min-width: 45%; min-height: 40px">
                                 ผู้ลงสมัคร
                             </div>
-                            <div class="flex align-items-center justify-content-end font-bold text-blue-300 border-round m-1" style="min-width: 50%;min-height: 50px">
-                                นายประยุทธ์ จันทร์โอชา
+                            <div class="flex align-items-center justify-content-end font-bold text-blue-300 border-round m-1" style="min-width: 50%;min-height: 40px">
+                                {{studentName}}
+                            </div>
+                        </div>
+                        <div *ngIf="regisDetail[0].candidate.candiStatus === '0'" class="flex align-items-center justify-content-center font-bold " style="min-width: 95%; min-height: 15px">
+                            <div class="flex align-items-center justify-content-start font-bold border-round m-1" style="min-width: 45%; min-height: 20px">
+                            </div>
+                            <div class="flex align-items-center justify-content-end font-bold text-blue-300 border-round m-1" style="min-width: 50%;min-height: 20px">
+                                <button pButton type="button" class="p-button buttonColor" label="แก้ไขข้อมูล" style="width: 200px;" (click)="goToEdit(regisDetail[0].candidate.candiId)"></button>
                             </div>
                         </div>
                     </div>
@@ -98,25 +105,19 @@
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center">
-                                <p-scrollPanel [style]="{width: '100%', height: '460px'}" styleClass="custombar2">
-                                    <div *ngFor="let election of electionList;index as i" class="flex align-items-center justify-content-center border-bottom-1 m-1 button" style="min-width: 96% ; min-height: 30px;cursor: pointer;">
-                                        <label for="{{candidateList[i].candidate.candiId}}" style="cursor: pointer;" class="flex align-items-center justify-content-center">
-                                        <div class="flex align-items-center justify-content-start m-1" style="min-width: 70%; min-height: 30px;">
+                                <p-scrollPanel [style]="{width: '300px', height: '460px'}" styleClass="custombar2">
+                                    <div *ngFor="let election of electionList;index as i" class="flex align-items-center justify-content-center border-bottom-1 button" style="min-width: 100% ; min-height: 30px;cursor: pointer;">
+                                        <label for="{{candidateList[i].candidate.candiId}}" style="cursor: pointer;" class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 30px;">
+                                        <div class="flex align-items-center justify-content-start" style="max-width: 210px; min-height: 30px;">
                                             <div>
                                                     {{election.elecName}}
                                                     <button type="button" id="{{candidateList[i].candidate.candiId}}" style="display: none;visibility: hidden;" (click)="checkstatus(candidateList[i].candidate.candiId)"></button>
                                                 </div>
                                             </div>
-                                            <div class="flex align-items-center justify-content-end font-bold text-blue-300 border-round m-1" style="min-width: 20%;min-height: 30px">
-                                                <div *ngIf="candidateList[i].candidate.candiStatus === '0'">
-                                                    <img src="assets\img\icon\status_wait.png" height="20" width="20">
-                                                </div>
-                                                <div *ngIf="candidateList[i].candidate.candiStatus === '1'">
-                                                    <img src="assets\img\icon\status_yes.png" height="20" width="20">
-                                                </div>
-                                                <div *ngIf="candidateList[i].candidate.candiStatus === '2'">
-                                                    <img src="assets\img\icon\status_no.png" height="20" width="20">
-                                                </div>
+                                            <div class="flex align-items-center justify-content-end font-bold text-blue-300 border-round" style="min-width: 80px;min-height: 30px">
+                                                    <img src="assets\img\icon\status_wait.png" height="20" width="20" *ngIf="candidateList[i].candidate.candiStatus === '0'">
+                                                    <img src="assets\img\icon\status_yes.png" height="20" width="20" *ngIf="candidateList[i].candidate.candiStatus === '1'">
+                                                    <img src="assets\img\icon\status_no.png" height="20" width="20" *ngIf="candidateList[i].candidate.candiStatus === '2'">
                                             </div>
                                         </label>
                                     </div>
