--- a/src/app/blockchain-evote/user/regis-status/regis-status.component.scss
+++ b/src/app/blockchain-evote/user/regis-status/regis-status.component.scss
@@ -51,3 +51,15 @@
         background-color: darken(#f2f2f2, 10%);
     }
 }
+
+.buttonColor {
+    background: #FCB61E;
+    border-radius: 5px;
+    border-color: #FCB61E;
+}
+
+.buttonColor:hover {
+    background: #FFA412;
+    border-radius: 5px;
+    border-color: #FFA412;
+}
