--- a/src/app/blockchain-evote/user/voting-page/voting-page.component.html
+++ b/src/app/blockchain-evote/user/voting-page/voting-page.component.html
@@ -84,17 +84,17 @@
                     <div class="flex m-2" *ngFor="let candidate of candidateList">
                         <p-card [style]="{width: '340px'}" styleClass="p-card-shadow">
                             <ng-template pTemplate="header">
-                                <div class="flex align-items-center justify-content-center">
+                                <div class="flex justify-content-center">
                                     <img src="api/candidate/image/{{candidate.candidate.candiImage}}" id="photo" [style]="{width: '80%',height: '280px'}" (error)="defaultImage($event)">
                                 </div>
                             </ng-template>
-                            <div class="flex align-items-center justify-content-center">
+                            <div class="flex justify-content-center">
                                 <b> ชื่อผู้ลงสมัคร :  </b>&nbsp;{{candidate.candidate.name}}
                             </div>
-                            <div class="flex align-items-center justify-content-center">
+                            <div class="flex justify-content-center">
                                 <b> เบอร์ : </b>&nbsp;{{candidate.candidate.candiNo}}
                             </div>
-                            <div class="flex align-items-center justify-content-center">
+                            <div class="flex justify-content-center">
                                 <b> พรรค : </b>&nbsp;{{candidate.candidate.candiParty}}
                             </div>
                             <ng-template pTemplate="footer">
