update lock vote

--- a/src/app/blockchain-evote/user/register/reg-candidate/reg-candidate.component.html
+++ b/src/app/blockchain-evote/user/register/reg-candidate/reg-candidate.component.html
@@ -188,7 +188,7 @@
                                 <label for="exp" class="block"><b>ลำดับที่ 1</b></label>
                             </div>
                         </div>
-                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisForm">
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisExpForm">
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
@@ -207,7 +207,7 @@
                                 <label for="exp" class="block"><b>ลำดับที่ 2</b></label>
                             </div>
                         </div>
-                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisForm">
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisExpForm">
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
@@ -226,7 +226,7 @@
                                 <label for="exp" class="block"><b>ลำดับที่ 3</b></label>
                             </div>
                         </div>
-                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisForm">
+                        <div class="flex flex-wrap card-container blue-container" style="max-width: 100%" [formGroup]="regisExpForm">
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
