--- a/src/app/blockchain-evote/user/regis-status/edit-register/edit-register.component.html
+++ b/src/app/blockchain-evote/user/regis-status/edit-register/edit-register.component.html
@@ -192,13 +192,13 @@
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
-                                    <input id="studentID" type="text" pInputText formControlName="position1" />
+                                    <input id="studentID" type="text" pInputText formControlName="position1" [(ngModel)]="candidateData.candiExpList[0].position" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">ปี</label>
-                                    <p-calendar formControlName="pYear1" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
+                                    <p-calendar formControlName="pYear1" view="year" dateFormat="yy" inputId="yearpicker" [(ngModel)]="candidateData.candiExpList[0].years"></p-calendar>
                                 </div>
                             </div>
                         </div>
@@ -211,13 +211,13 @@
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
-                                    <input id="studentID" type="text" pInputText formControlName="position2" />
+                                    <input id="studentID" type="text" pInputText formControlName="position2" [(ngModel)]="candidateData.candiExpList[1].position" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">ปี</label>
-                                    <p-calendar formControlName="pYear2" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
+                                    <p-calendar formControlName="pYear2" view="year" dateFormat="yy" inputId="yearpicker" [(ngModel)]="candidateData.candiExpList[1].years"></p-calendar>
                                 </div>
                             </div>
                         </div>
@@ -230,13 +230,13 @@
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">รายการที่เคยดำรงตำแหน่ง</label>
-                                    <input id="studentID" type="text" pInputText formControlName="position3" />
+                                    <input id="studentID" type="text" pInputText formControlName="position3" [(ngModel)]="candidateData.candiExpList[2].position" />
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <div class="field">
                                     <label for="studentID" class="block">ปี</label>
-                                    <p-calendar formControlName="pYear3" view="year" dateFormat="yy" inputId="yearpicker"></p-calendar>
+                                    <p-calendar formControlName="pYear3" view="year" dateFormat="yy" inputId="yearpicker" [(ngModel)]="candidateData.candiExpList[2].years"></p-calendar>
                                 </div>
                             </div>
                         </div>
@@ -253,6 +253,11 @@
                                 <img [src]="imageSrc" id="photo" [style]="{width: '180px',height: '200px'}">
                             </div>
                         </div>
+                        <div *ngIf="displayPic === false" class="flex flex-wrap card-container blue-container" style="max-width: 100%">
+                            <div class="flex align-items-center justify-content-left m-2 border-round" style="min-width: 200px; min-height: 100px">
+                                <img src="api/candidate/image/{{candidateData.candiImage}}" id="photo" [style]="{width: '180px',height: '200px'}">
+                            </div>
+                        </div>
                         <div class="flex flex-wrap card-container blue-container" style="max-width: 100%">
                             <div class="flex align-items-center justify-content-left m-2 border-round" style="min-width: 200px; min-height: 100px">
                                 <p-fileUpload #upload mode="basic" name="image" accept="image/*" chooseLabel="เลือกรูปภาพ" (onSelect)="onSelect($event)">
@@ -267,7 +272,7 @@
                                 <div class="flex align-items-center justify-content-center border-round " style="min-width: 100%; min-height: 50px ">
                                     <div style="margin-right: 1rem; ">
                                         <p-confirmDialog [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '50vw'}" [baseZIndex]="10000" acceptButtonStyleClass="p-button-success" rejectButtonStyleClass="p-button-danger p-button-text"></p-confirmDialog>
-                                        <button pButton pRipple type="button " icon="pi pi-check" label="ลงทะเบียน" class="p-button-raised p-button-success " (click)="register()"></button>
+                                        <button pButton pRipple type="button" icon="pi pi-check" label="แก้ไขข้อมูล" class="p-button-raised buttonColor " (click)="register()"></button>
                                     </div>
                                     <button pButton pRipple type="button" icon="pi pi-times" label="ล้างข้อมูล" class="p-button-raised p-button-danger " style="width: 140px; " (click)="refresh(upload)"></button>
                                 </div>
@@ -286,6 +291,6 @@
         <img src="assets\img\icon\status_yes.png" height="65" width="65">
     </div>
     <div class="flex align-items-center justify-content-center mt-5 " style="min-width: 100%; min-height: 50px ">
-        <H1>ลงทะเบียนสำเร็จ</H1>
+        <H1>แก้ไขข้อมูลสำเร็จ</H1>
     </div>
 </p-dialog>
