--- a/src/app/blockchain-evote/user/regis-status/regis-status.component.html
+++ b/src/app/blockchain-evote/user/regis-status/regis-status.component.html
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                             <div class="flex align-items-center justify-content-center">
-                                <p-scrollPanel [style]="{width: '300px', height: '460px'}" styleClass="custombar2">
+                                <p-scrollPanel [style]="{width: '300px', height: '460px'}" styleClass="custombar">
                                     <div *ngFor="let election of electionList;index as i" class="flex align-items-center justify-content-center border-bottom-1 button" style="min-width: 100% ; min-height: 30px;cursor: pointer;">
                                         <label for="{{candidateList[i].candidate.candiId}}" style="cursor: pointer;" class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 30px;">
                                         <div class="flex align-items-center justify-content-start" style="max-width: 210px; min-height: 30px;">
