--- a/src/app/blockchain-evote/user/voting-page/voting-page.component.html
+++ b/src/app/blockchain-evote/user/voting-page/voting-page.component.html
@@ -79,7 +79,10 @@
 
     <div class="flex justify-content-center">
         <div class="flex flex-wrap card-container m-2 justify-content-center" style="max-width: 80%">
-            <p-panel header="รายชื่อผู้ลงสมัคร">
+            <p-blockUI [blocked]="voted" [target]="pnl">
+                <i class="pi pi-lock" style="font-size: 3rem"></i>
+            </p-blockUI>
+            <p-panel header="รายชื่อผู้ลงสมัคร" #pnl>
                 <div class="flex flex-wrap card-container align-items-center justify-content-center">
                     <div class="flex m-2" *ngFor="let candidate of candidateList">
                         <p-card [style]="{width: '340px'}" styleClass="p-card-shadow">
