--- a/src/app/blockchain-evote/user/voting-score/voting-score.component.html
+++ b/src/app/blockchain-evote/user/voting-score/voting-score.component.html
@@ -16,9 +16,9 @@
                     <div class="flex align-items-start justify-content-center m-2 border-round" style="min-width: 80%; min-height: 500px">
                         <p-chart type="bar" [data]="chartData" [options]="options" width="40vw" height="60vh"></p-chart>
                     </div>
-                    <div class="flex align-items-center justify-content-center bg-yellow-500 font-bold text-white m-2 border-round" style="min-width: 80%; min-height: 200px">
+                    <!-- <div class="flex align-items-center justify-content-center bg-yellow-500 font-bold text-white m-2 border-round" style="min-width: 80%; min-height: 200px">
                         Hello
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
