--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.p-scrollpanel {
+    &.custombar {
+        .p-scrollpanel-wrapper {
+            border-right: 9px solid var(--layer-1);
+            border-bottom: 9px solid var(--layer-1);
+        }
+        .p-scrollpanel-bar {
+            background-color: var(--layer-2);
+            border-radius: 0;
+            opacity: 1;
+            transition: background-color .2s;
+        }
+    }
+}
