--- a/src/app/blockchain-evote/admin/homepage-admin/homepage-admin.component.scss
+++ b/src/app/blockchain-evote/admin/homepage-admin/homepage-admin.component.scss
@@ -20,3 +20,15 @@
 .blockBg:hover {
     background: linear-gradient(46.33deg, rgba(4, 152, 143, 0.75) 100%, rgba(152, 255, 206, 0.75) 99.97%);
 }
+
+.buttonColor {
+    background: #05A4A9;
+    border-radius: 5px;
+    border-color: #05A4A9;
+}
+
+.buttonColor:hover {
+    background: #039396;
+    border-radius: 5px;
+    border-color: #039396;
+}
