--- a/src/app/blockchain-evote/admin/homepage-admin/election-detail-onvote/election-detail-onvote.component.html
+++ b/src/app/blockchain-evote/admin/homepage-admin/election-detail-onvote/election-detail-onvote.component.html
@@ -1,4 +1,4 @@
-<app-menu-bar></app-menu-bar>
+<app-menu-bar-admin></app-menu-bar-admin>
 <div class="card">
     <div class="card-container overflow-hidden">
         <div class="flex">
@@ -56,12 +56,12 @@
                                     <label for="Number" class="block"><b>สิ้นสุด : {{election.elecEnddate | formatDate}}</b></label>
                                 </div>
                             </div>
-                            <div class="flex flex-wrap card-container blue-container " style="max-width: 100%">
+                            <div class="flex flex-wrap card-container justify-content-center blue-container " style="max-width: 100%">
                                 <div class="flex align-items-center justify-content-start border-round mt-2" style="min-width: 200px; min-height: 75px">
                                     <i class="pi pi-check-circle" style="font-size: 1rem;margin-right: 5px;"></i>
                                     <label for="Number" class="block text-xl"><b>เปิดให้ลงคะแนน : </b></label>
                                     <div class="flex align-items-center justify-content-start border-round mt-2 ml-2 " style="min-width: 20px; min-height: 75px ">
-                                        <p-inputSwitch [(ngModel)]="election.onVote"></p-inputSwitch>
+                                        <p-inputSwitch [(ngModel)]="election.elecOnVote" [disabled]="true"></p-inputSwitch>
                                     </div>
                                 </div>
                             </div>
@@ -79,29 +79,26 @@
 
     <div class="flex justify-content-center">
         <div class="flex flex-wrap card-container m-2 justify-content-center" style="max-width: 80%">
-            <p-blockUI [blocked]="voted" [target]="pnl">
-                <i class="pi pi-lock" style="font-size: 3rem"></i>
-            </p-blockUI>
             <p-panel header="รายชื่อผู้ลงสมัคร" #pnl>
                 <div class="flex flex-wrap card-container align-items-center justify-content-center">
-                    <div class="flex m-2" *ngFor="let candidate of candidateList">
+                    <div class="flex m-2" *ngFor="let candidate of electionAndCandiList">
                         <p-card [style]="{width: '340px'}" styleClass="p-card-shadow">
                             <ng-template pTemplate="header">
                                 <div class="flex justify-content-center">
-                                    <img src="api/candidate/image/{{candidate.candidate.candiImage}}" id="photo" [style]="{width: '80%',height: '280px'}" (error)="defaultImage($event)">
+                                    <img src="api/candidate/image/" id="photo" [style]="{width: '80%',height: '280px'}" (error)="defaultImage($event)">
                                 </div>
                             </ng-template>
                             <div class="flex justify-content-center">
-                                <b> ชื่อผู้ลงสมัคร :  </b>&nbsp;{{candidate.candidate.name}}
+                                <b> ชื่อผู้ลงสมัคร :  </b>&nbsp; {{candidate.candidate.name}}
                             </div>
                             <div class="flex justify-content-center">
-                                <b> เบอร์ : </b>&nbsp;{{candidate.candidate.candiNo}}
+                                <b> เบอร์ : </b>&nbsp; {{candidate.candidate.candiNo}}
                             </div>
                             <div class="flex justify-content-center">
-                                <b> พรรค : </b>&nbsp;{{candidate.candidate.candiParty}}
+                                <b> พรรค : </b>&nbsp; {{candidate.candidate.candiParty}}
                             </div>
                             <ng-template pTemplate="footer">
-                                <button pButton type="button" class="p-button buttonColor" label="ลงคะแนน" [style]="{width: '100%'}" (click)="vote(candidate.candidate)"></button>
+                                <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบข้อมูล" [style]="{width: '100%'}"></button>
                             </ng-template>
                         </p-card>
                     </div>
@@ -113,12 +110,3 @@
 
 <div style="margin-top:2%;"></div>
 <app-footer></app-footer>
-<p-confirmDialog [breakpoints]="{'960px': '75vw', '640px': '100vw'}" [style]="{width: '35vw'}" [baseZIndex]="10000" acceptButtonStyleClass="p-button-success" rejectButtonStyleClass="p-button-danger p-button-text"></p-confirmDialog>
-<p-dialog [(visible)]="displayModal" [modal]="true" [style]="{width: '30vw'}" [breakpoints]="{'960px': '75vw', '640px': '80vw'}" [draggable]="false" [resizable]="false" [closable]="false" [transitionOptions]="'280ms'">
-    <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 50px ">
-        <img src="assets\img\icon\status_yes.png" height="65" width="65">
-    </div>
-    <div class="flex align-items-center justify-content-center mt-5 " style="min-width: 100%; min-height: 50px ">
-        <H1>ลงคะแนนสำเร็จ</H1>
-    </div>
-</p-dialog>
